--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,22 @@
 name: zef_log_abstractions
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+description: A versatile and extensible logging framework for Dart applications, providing configurable log levels, custom formatting, and adaptable output options.
+version: 0.0.1
+homepage: https://www.zooper.dev
+repository: https://github.com/zooper-lib/ZEF_Log_Abstractions
+topics:
+  - logging
+  - log
+  - abstractions
+funding:
+  - https://buymeacoffee.com/zooperlib
 
 environment:
-  sdk: ^3.3.0
+  sdk: ^3.0.5
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
